# RAGs_IN_DEPTH

./: main.py  pyproject.toml  requirements.txt
Agentic RAG/: ReAct_rag_agent.ipynb  basic_agentic_rag.ipynb  chain_of_thoughts_with_rag.ipynb  detailed_agentic_rag.ipynb  iterative_retrieval_with_self_reflection.ipynb  langchain_notes.txt  langgraph_notes.txt  query_planning_and_decomposition_rag.ipynb  response_format_and_context_schema_example.ipynb  self_reflection_in_rag.ipynb  test.ipynb  tool_creation_for_rag_agent.ipynb
Data_Ingestion/: 01-Introduction.ipynb  02-Ingesting_Parsing_PDF_Loaders.ipynb  03-Ingesting_Parsing_Docx_Loaders.ipynb  04-Ingesting_CSV_Excel.ipynb  05-Ingestion_Parsing_JSON_Loaders.ipynb
Embeddings_and_Vectore_Databases/: embeddings.ipynb
Hybrid_Search_Retriever/: Re_Ranking_Technique.ipynb  dense_sparse_retrievers.ipynb  langchain_sample.txt
LangChain_version_1.1/: create_agents_using_langchain.ipynb  human_in_the_loop_middleware.ipynb  invoke_and_batch_streaming.ipynb  middleware_from_langchain.ipynb  structured_output.ipynb  summarization_middleware_from_langchain.ipynb  tools_in_langchain.ipynb
LangGraph_Basics/: agent_with_memory.ipynb  chains_with_langgraph.ipynb  re-act_agent.ipynb  (+6 more)
Project/DOC_RAG/: pyproject.toml  requirements.txt
Project/DOC_RAG/data/: url.txt.txt
Project/DOC_RAG/src/document_ingestion/: document_processor.py
Project/DOC_RAG/src/graphs/: graph_builder.py
Project/DOC_RAG/src/nodes/: rag_nodes.py  react_nodes.py
Project/DOC_RAG/src/states/: state.py
Project/DOC_RAG/src/vectorstores/: vectorstore.py
(+36 files in other folders)
